--- a/style.css
+++ b/style.css
@@ -87,8 +87,16 @@ a:hover {
     color:   #5cc8f7;
 }
 
-/* Fade-in Animation */
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style: none;
+}
+
+/* Fade-in Animation 
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(-10px); }
     to { opacity: 1; transform: translateY(0); }
 }
+*/
