--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     padding: 1px 0;
     position: fixed;
     width: 100%;
-    top: 0;
+    top: 0px;
     left: 0;
     z-index: 1000;
 }
