--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* General Styles */
+@import url('https://fonts.maateen.me/kalpurush/font.css');
+
 body {
     font-family: Roboto, sans-serif;
+    font-family: 'Kalpurush', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #fafdff;
